# Wearable_stress_biomarker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DEV_LOG.md  Dockerfile  Instructions.txt  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yaml  docker-build.yml
configs/: default.yaml
models/prod/: config_snapshot.yaml  metrics.json  model.pt  predictions.csv  training_history.joblib
notebooks/: 01_preprocessing_pipeline_verification.ipynb  02_feature_extraction_verification.ipynb  03_baseline_model_fitting_verification.ipynb  03_model_fitting_verification.ipynb  04_deep_learning_verification.ipynb  04_deep_model_fitting_verification.ipynb  05_inference_demo.ipynb
src/: config.py
src/api/: app.py
src/data/: make_dataset.py  validate_raw.py
src/features/: build_features.py  feature_extraction.py  sqi.py
src/models/: deep.py  evaluate.py  predict.py  train.py
src/monitoring/: drift_report.py
src/utils/: logger.py
src/visualization/: plots.py
tests/: test_api_client.py  test_data_processing.py  test_feature_correctness.py  test_inference.py  test_metrics.py  test_model_architecture.py  test_monitoring.py  test_pipeline_consistency.py  test_splits.py  test_sqi.py  test_training_flow.py  verify_api_client.py  verify_inference.py  verify_monitoring.py  verify_pipeline_consistency.py
